--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
     "dev": "webpack --mode development && node dist/index.js",
-    "build": "webpack production"
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "babel-loader": "^9.1.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
